# IDS721-homework

./: Final-Spring-2024-Cloud-Computing.docx
hw1/: README.md  config.toml  theme.toml
hw1/README.assets/: README.md
hw1/content/: _index.md
hw1/content/projects/: _index.md
hw1/data/: education.json  skills.json
hw1/public/: 404.html  atom.xml  index.html  main.css  robots.txt  search_index.en.js  sitemap.xml
hw1/public/blog/: index.html
hw1/public/json/: index.html
hw1/public/opensource/: index.html
hw1/public/projects/: index.html
hw1/public/publications/: index.html
hw1/public/search/: index.html
hw1/public/tags/: index.html
hw1/templates/: index.html
hw1/templates/macros/: fullpage.html
hw10/: README.md
hw10/hugging_face_transformer/: Cargo.toml  Dockerfile  entrypoint.sh  transformer_inference.py
hw2/new-lambda-project/: Cargo.toml  README.md  build_lambda_role.json
hw3/: README.md  cdk.json  package-lock.json  package.json
hw3/lib/: hw3-2-stack.ts
hw3/test/: hw3-2.test.ts
hw4/: README.md
hw4/actix_web_app/: Cargo.toml  Dockerfile
hw5/: input.json  output.json  readme.md
hw5/rust_lambda_service/: Cargo.toml
hw5/rust_lambda_service/lambda_package/: bootstrap  rust_lambda_service
hw5/rust_lambda_service/src/: main.rs
hw6/: readme.md
hw6/logtest/: Cargo.toml
hw7/: README.md  docker-compose.yml
hw7/milvus_project/: Cargo.toml
hw8/: README.md
hw8/rust_cli_tool/: Cargo.toml  test
hw9/: README.md  app.py
individual4/: README.md
individual4/rust_lambda_function/: Cargo.toml  common_used
(+34 files in other folders)
