[package]
name = "rust_lambda_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusoto_core = "0.47.0"
rusoto_dynamodb = "0.47.0"
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10.64", features = ["vendored"] }
anyhow = "1.0"
